--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
               </form> 
         </div>
         <div class= "bottom">
-            <button type ="submit">Create Account</button>
+            <form action="#" method="post">
+                <input type="submit" value="Submit">
+            </form>
             <div>Already have an account? <a>Log In</a></div>
         </div>
     </div>
